--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,10 @@
 body {
+    font-family: 'Akshar', sans-serif;
     margin: 0;
 }
+* {
+    box-sizing: border-box;
+  }
 .header{
     position: fixed;
     top: 0;
@@ -14,10 +18,13 @@ body {
     padding: 20px;
     background-color: tomato;
 }
-.search-form>input,.search-form>button{
+.search-form>input,
+.search-form>button{
     font-size: 20px;
 }
 .input-search{
+    padding: 0 10px 0 10px;
+    font-family: 'Akshar', sans-serif;
     border-radius: 5px;
     border: 0.8px solid grey
 }
@@ -32,29 +39,100 @@ body {
 .icon-search{
     fill: rgba(128, 128, 128, 0.315);
 }
+
+@media screen and (max-width: 478px) {
 .gallery{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 20px;
-    margin-top:100px;
-    max-width: 1200px;
-    margin-right: auto;
+    display: flex;
+    margin-top: 80px;
+    flex-direction: column;
     margin-left: auto;
+    margin-right: auto;
+    max-width:200px;
+
+}
+.photo-card{
+    
+    margin-bottom: 20px;
+}
+.info{
+    font-size: 14px;
+}
+.input-search{
+    width: 150px;
+    padding: 0 10px 0 10px;
+    font-family: 'Akshar', sans-serif;
+    border-radius: 5px;
+    border: 0.8px solid grey
+}
+}
+@media (min-width: 479px) and (max-width: 768px) {
+    .gallery{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 20px;
+        margin-top: 100px;
+        padding-right: 20px;  
+        padding-left: 20px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .info{
+        font-size: auto;
+        padding-bottom: 40px;
+    }
+}
+@media screen and (min-width: 768px) {
+    .gallery{
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 20px;
+        margin-top: 100px;
+        padding-right: 20px;  
+        padding-left: 20px;
+        margin-left: auto;
+        margin-right: auto;
+        
+    }
+    .info{
+        font-size: auto;
+    }
+}
+@media screen and (min-width: 1200px) {
+    .gallery{
+        display: grid;
+        grid-template-columns: repeat(4,1fr);
+        gap: 20px;
+        margin-top:100px;
+        max-width: 1200px;
+        margin-right: auto;
+        margin-left: auto;
+        
+    }
+}
+.photo-card{
+    box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    border: 1px solid rgba(0, 0, 0, 0.26);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+.photo-card:hover{
+    transform: scale(1.04)
 }
 .gallery__image{
-    border: red 1px solid;
     height: 77%;
     width: 100%;
     object-fit: cover;
+}
+.gallery__item{
+    box-sizing: border-box;
 }
 .info{
     display: flex;
     justify-content: space-around;
 }
 .info-item {
- display: flex;
- flex-direction: column;
- text-align: center;
+display: flex;
+flex-direction: column;
+text-align: center;
 }
 .load-more{
 display: flex;
