--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,6 +1,13 @@
+:root {
+    --animation: cubic-bezier(0.4, 0, 0.2, 1);
+    --timing-duration: 250ms;
+  }
 body {
     font-family: 'Akshar', sans-serif;
     margin: 0;
+}
+input,button {
+    outline:none;
 }
 * {
     box-sizing: border-box;
@@ -10,6 +17,7 @@ body {
     top: 0;
     z-index: 100;
     width: 100%;
+
 }
 .search-form{
     display: flex;
@@ -17,6 +25,10 @@ body {
     padding-top: 20px;
     padding: 20px;
     background-color: tomato;
+    background-image: linear-gradient(to right, rgba(47,48,58,0.3), rgba(47,48,58,0.3)),url(../images/1616609062_56-p-priyatnii-fon-dlya-glaz-62.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 .search-form>input,
 .search-form>button{
@@ -26,20 +38,36 @@ body {
     padding: 0 10px 0 10px;
     font-family: 'Akshar', sans-serif;
     border-radius: 5px;
-    border: 0.8px solid grey
+    border: 0.8px solid grey;
+    width: 250px;
+    height: 40px;
+    transition: transform var(--timing-duration) var(--animation);
 }
 .btn-search{
+    height: 40px;
+    width: 40px;
     display: flex;
     align-items: center;
     padding: 5px;
     margin-left:5px;
     border-radius: 5px;
-    border: 0.8px solid grey
+    border: 0.8px solid grey;
+    transition: transform var(--timing-duration) var(--animation)
+}
+.btn-search:hover,.btn-search:focus,.input-search:hover,.input-search:focus{
+    transform: scale(1.02);
+    border: 1px solid rgb(122, 76, 7);
+    box-sizing: border-box;
 }
 .icon-search{
-    fill: rgba(128, 128, 128, 0.315);
+    fill: rgba(128, 128, 128, 0.603);
 }
-
+.icon-search:hover,.icon-search:focus{
+    fill:rgba(19, 107, 46, 0.493);
+}
+.btn-search:hover{
+    transform: scale(1.05);
+}
 @media screen and (max-width: 478px) {
 .gallery{
     display: flex;
@@ -112,7 +140,7 @@ body {
 .photo-card{
     box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
     border: 1px solid rgba(0, 0, 0, 0.26);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1)
+    transition: transform var(--timing-duration) var(--animation)
 }
 .photo-card:hover{
     transform: scale(1.04)
