--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -53,7 +53,8 @@ input,button {
     margin-left:5px;
     border-radius: 5px;
     border: 0.8px solid grey;
-    transition: transform var(--timing-duration) var(--animation)
+    transition: transform var(--timing-duration) var(--animation);
+    background-color: white;
 }
 .btn-search:hover,.btn-search:focus,.input-search:hover,.input-search:focus{
     transform: scale(1.02);
@@ -67,8 +68,10 @@ input,button {
     fill:rgba(19, 107, 46, 0.493);
     outline:none;
 }
-.btn-search:hover{
-    transform: scale(1.05);
+.info{
+    display: flex;
+    padding-right: 10px;
+    padding-left: 10px;
 }
 @media screen and (max-width: 478px) {
 .gallery{
@@ -80,14 +83,9 @@ input,button {
     max-width:200px;
 
 }
-.photo-card{
-    
-    margin-bottom: 20px;
-}
 .info{
-    display: flex;
     font-size: 12px;
-    justify-content: space-between;
+    justify-content: space-around;
 
 }
 .input-search{
@@ -111,7 +109,7 @@ input,button {
     }
     .info{
         font-size: auto;
-        justify-content: space-between;
+        justify-content: space-around;
         padding-bottom: 40px;
     }
 }
@@ -129,7 +127,7 @@ input,button {
     }
     .info{
         font-size: auto;
-        justify-content: space-between;
+        justify-content: space-around;
     }
 }
 @media screen and (min-width: 1200px) {
