--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,7 +25,7 @@ input,button {
     justify-content: center;
     padding-top: 20px;
     padding: 20px;
-    background-color: tomato;
+    background-color: rgba(0, 128, 0, 0.637);
     background-image: linear-gradient(to right, rgba(47,48,58,0.3), rgba(47,48,58,0.3)),url(../images/1616609062_56-p-priyatnii-fon-dlya-glaz-62.png);
     background-position: center;
     background-repeat: no-repeat;
