--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -76,7 +76,8 @@ input,button {
 @media screen and (max-width: 478px) {
 .gallery{
     display: flex;
-    margin-top: 80px;
+    gap:20px;
+    margin-top: 100px;
     flex-direction: column;
     margin-left: auto;
     margin-right: auto;
