--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -155,6 +155,7 @@ input,button {
     height: 77%;
     width: 100%;
     object-fit: cover;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.26);
 }
 .gallery__item{
     box-sizing: border-box;
